# demo-celery

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
celery_tasks/: __init__.py
