[tool.poetry]
name = "demo-celery"
version = "0.1.0"
description = ""
authors = ["prd-tai-nguyen <tai.nguyen@paradox.ai>"]
readme = "README.md"
packages = [{include = "demo_celery", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
celery = "^5.2.7"
redis = "^4.4.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
